added change habit section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 02</title>
+    <link href="https://fonts.cdnfonts.com/css/miama" rel="stylesheet">           
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -24,7 +25,7 @@
         <div class="header-container display-flex">
             <div class="header-container-left">
                 <h1 class="header-container-title">Get body in <br> <span
-                        class="titillium-web-bold-italic shape">shape</span> & stay <br>healthy</h1>
+                        class="miama-font">shape </span> & stay <br>healthy</h1>
                 <p class="header-container-description">A huge selection of health and fitness content, healthy recipes
                     and transformation stories to help you get fit and stay fit!</p>
                 <div class="display-flex">
@@ -38,7 +39,7 @@
                     <span class="dot"></span>
                     <div class="vd-tutorial">
                         <span id="above">350+</span> <br>
-                        <span id="down">Video tutorial</span>
+                        <span id="down-two">Video tutorial</span>
                     </div>
                 </button>
                 <button class="image-above-two">
@@ -50,7 +51,37 @@
         </div>
     </header>
     <main>
-
+        <!-- Change Your Habit Section Starts -->
+        <section class="change-habit">
+            <h3 class="change-habit-title">Change Your Habits</h3>
+            <p class="change-habit-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <div class="card display-flex">
+                <div class="habit-card">
+                    <img src="images/image 3.png" alt="" class="habit-img">
+                    <h4 class="habit-title">Movement</h4>
+                    <p class="habit-description">We believe fitness should be 
+                        accessible to everyone</p>
+                </div>
+                <div class="habit-card">
+                    <img src="images/image 2.png" alt="" class="habit-img">
+                    <h4 class="habit-title">Time</h4>
+                    <p class="habit-description">We believe fitness should be 
+                        accessible to everyone</p>
+                </div>
+                <div class="habit-card">
+                    <img src="images/image 4.png" alt="" class="habit-img">
+                    <h4 class="habit-title">Practice</h4>
+                    <p class="habit-description">We believe fitness should be 
+                        accessible to everyone</p>
+                </div>
+                <div class="habit-card">
+                    <img src="images/image 5.png" alt="" class="habit-img">
+                    <h4 class="habit-title">Weight Loss</h4>
+                    <p class="habit-description">We believe fitness should be 
+                        accessible to everyone</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
