added run section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
     <main>
         <!-- Change Your Habit Section Starts -->
-        <section class="change-habit">
+        <section class="your">
             <h3 class="change-habit-title">Change Your Habits</h3>
             <p class="change-habit-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
             <div class="card display-flex">
@@ -82,6 +82,22 @@
                 </div>
             </div>
         </section>
+        <!-- Change Your Habit Section Ends -->
+
+        <!-- Run an Extra Mile Easily Section Starts -->
+         <section class="run-easy display-flex">
+            <div class="run-easy-container">
+                <h2 class="run-easy-container-title">Run an Extra <br>Mile Easily</h2>
+                <p class="run-easy-container-description">We believe fitness should be accessible to everyone, 
+                    everywhere, regardless of income or access to a gym. With 
+                    hundreds of professional workouts.</p>
+                <button class="nav-item-btn">Join Now</button>
+            </div>
+            <div>
+                <img class="run-easy-container-img" src="images/run.jpg" alt="">
+            </div>
+         </section>
+         <!-- Run an Extra Mile Easily Section Ends -->
     </main>
     <footer>
 
