--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 02</title>
-    <link href="https://fonts.cdnfonts.com/css/miama" rel="stylesheet">           
+    <link href="https://fonts.cdnfonts.com/css/miama" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -24,8 +24,9 @@
         </nav>
         <div class="header-container display-flex">
             <div class="header-container-left">
-                <h1 class="header-container-title">Get body in <br> <span
-                        class="miama-font">shape </span> & stay <br>healthy</h1>
+                <h1 class="header-container-title">Get body in <br> <span class="miama-font">shape </span> & stay
+                    <br>healthy
+                </h1>
                 <p class="header-container-description">A huge selection of health and fitness content, healthy recipes
                     and transformation stories to help you get fit and stay fit!</p>
                 <div class="display-flex">
@@ -54,30 +55,31 @@
         <!-- Change Your Habit Section Starts -->
         <section class="your">
             <h3 class="change-habit-title">Change Your Habits</h3>
-            <p class="change-habit-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            <p class="change-habit-description">We believe fitness should be accessible to everyone, everywhere,
+                regardless of income or access to a gym.</p>
             <div class="card display-flex">
                 <div class="habit-card">
                     <img src="images/image 3.png" alt="" class="habit-img">
                     <h4 class="habit-title">Movement</h4>
-                    <p class="habit-description">We believe fitness should be 
+                    <p class="habit-description">We believe fitness should be
                         accessible to everyone</p>
                 </div>
                 <div class="habit-card">
                     <img src="images/image 2.png" alt="" class="habit-img">
                     <h4 class="habit-title">Time</h4>
-                    <p class="habit-description">We believe fitness should be 
+                    <p class="habit-description">We believe fitness should be
                         accessible to everyone</p>
                 </div>
                 <div class="habit-card">
                     <img src="images/image 4.png" alt="" class="habit-img">
                     <h4 class="habit-title">Practice</h4>
-                    <p class="habit-description">We believe fitness should be 
+                    <p class="habit-description">We believe fitness should be
                         accessible to everyone</p>
                 </div>
                 <div class="habit-card">
                     <img src="images/image 5.png" alt="" class="habit-img">
                     <h4 class="habit-title">Weight Loss</h4>
-                    <p class="habit-description">We believe fitness should be 
+                    <p class="habit-description">We believe fitness should be
                         accessible to everyone</p>
                 </div>
             </div>
@@ -85,19 +87,94 @@
         <!-- Change Your Habit Section Ends -->
 
         <!-- Run an Extra Mile Easily Section Starts -->
-         <section class="run-easy display-flex">
+        <section class="run-easy display-flex">
             <div class="run-easy-container">
                 <h2 class="run-easy-container-title">Run an Extra <br>Mile Easily</h2>
-                <p class="run-easy-container-description">We believe fitness should be accessible to everyone, 
-                    everywhere, regardless of income or access to a gym. With 
+                <p class="run-easy-container-description">We believe fitness should be accessible to everyone,
+                    everywhere, regardless of income or access to a gym. With
                     hundreds of professional workouts.</p>
                 <button class="nav-item-btn">Join Now</button>
             </div>
             <div>
                 <img class="run-easy-container-img" src="images/run.jpg" alt="">
             </div>
-         </section>
-         <!-- Run an Extra Mile Easily Section Ends -->
+        </section>
+        <!-- Run an Extra Mile Easily Section Ends -->
+
+        <!-- BMI Calculator Section Starts -->
+        <section class="bmi">
+            <div class="bmi-head">
+                <h1 class="bmi-head-title">BMI Calculator</h1>
+                <p class="bmi-head-description">We believe fitness should be accessible to everyone,
+                    everywhere, regardless of income or
+                    access to a gym.</p>
+            </div>
+            <div class="chart-form">
+                <div>
+                    <h2 class="chart-title">BMI Calculator Chart</h2>
+                    <table>
+                        <thead>
+                            <tr class="column">
+                                <th>BMI</th>
+                                <th>Weight Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="row">
+                                <td>Below 18.5</td>
+                                <td>Underweight</td>
+                            </tr>
+                            <tr class="row">
+                                <td>18.5 24.9</td>
+                                <td>Healthy</td>
+                            </tr>
+                            <tr class="row">
+                                <td>25.0 29.9</td>
+                                <td>Overweight</td>
+                            </tr>
+                            <tr class="row">
+                                <td>30.0 and Above</td>
+                                <td>Obese</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="form">
+                    <h2 class="chart-title">Calculate your BMI</h2>
+                    <p class="run-easy-container-description">We believe fitness should be accessible to everyone, everywhere, regardless of 
+                        income or access to a gym. </p>
+                    <div class="input-group">
+                        <input type="text" placeholder="Height/cm">
+                        <input type="text" placeholder="Weight/kg">
+                    </div>
+                    <div class="input-group">
+                        <input type="text" placeholder="Age">
+                        <select class="select-one">
+                            <option>Sex</option>
+                            <option>Male</option>
+                            <option>Female</option>
+                        </select>
+                    </div>
+                    <div class="input-group">
+                        <select class="select-two">
+                            <option>Select an activity factor</option>
+                            <option>Active</option>
+                            <option>Non Active</option>
+                        </select>
+                    </div>
+                    <button class="nav-item-btn" type="button">Calculate</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- BMI Calculator Section Ends -->
+
+        <!-- Meet Our Team Section Starts -->
+
+        
+
+        <!-- Meet Our Team Section Ends -->
+        
     </main>
     <footer>
 
