added meet team section

--- a/index.html
+++ b/index.html
@@ -171,7 +171,37 @@
 
         <!-- Meet Our Team Section Starts -->
 
-        
+        <section class="meet-team">
+            <h2 class="meet-team-title">Meet Our Team Section</h2>
+            <p class="meet-team-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or 
+                access to a gym.</p>
+                <div class="meet-team-img">
+                    <div class="team-sec-one">
+                        <h3 class="all-img-title">Jerome Bell</h3>
+                        <p class="all-img-des">Trainer</p>
+                    </div>
+                    <div class="team-sec-two">
+                        <h3 class="all-img-title">Cameron Williamson</h3>
+                        <p class="all-img-des">Trainer</p>
+                    </div>
+                    <div class="team-sec-three">
+                        <h3 class="all-img-title">Darrell Steward</h3>
+                        <p class="all-img-des">Trainer</p>
+                    </div>
+                    <div class="team-sec-four">
+                        <h3 class="all-img-title">Dianne Russell</h3>
+                        <p class="all-img-des">Trainer</p>
+                    </div>
+                    <div class="team-sec-five">
+                        <h3 class="all-img-title">Cody Fisher</h3>
+                        <p class="all-img-des">Trainer</p>
+                    </div>
+                    <div class="team-sec-six">
+                        <h3 class="all-img-title">Theresa Webb</h3>
+                        <p class="all-img-des">Trainer</p>
+                    </div>
+                </div>
+        </section>
 
         <!-- Meet Our Team Section Ends -->
         
