added footer section

--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
                 </div>
                 <div class="form">
                     <h2 class="chart-title">Calculate your BMI</h2>
-                    <p class="run-easy-container-description">We believe fitness should be accessible to everyone, everywhere, regardless of 
+                    <p class="run-easy-container-description">We believe fitness should be accessible to everyone,
+                        everywhere, regardless of
                         income or access to a gym. </p>
                     <div class="input-group">
                         <input type="text" placeholder="Height/cm">
@@ -173,41 +174,65 @@
 
         <section class="meet-team">
             <h2 class="meet-team-title">Meet Our Team Section</h2>
-            <p class="meet-team-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or 
+            <p class="meet-team-description">We believe fitness should be accessible to everyone, everywhere, regardless
+                of income or
                 access to a gym.</p>
-                <div class="meet-team-img">
-                    <div class="team-sec-one">
-                        <h3 class="all-img-title">Jerome Bell</h3>
-                        <p class="all-img-des">Trainer</p>
-                    </div>
-                    <div class="team-sec-two">
-                        <h3 class="all-img-title">Cameron Williamson</h3>
-                        <p class="all-img-des">Trainer</p>
-                    </div>
-                    <div class="team-sec-three">
-                        <h3 class="all-img-title">Darrell Steward</h3>
-                        <p class="all-img-des">Trainer</p>
-                    </div>
-                    <div class="team-sec-four">
-                        <h3 class="all-img-title">Dianne Russell</h3>
-                        <p class="all-img-des">Trainer</p>
-                    </div>
-                    <div class="team-sec-five">
-                        <h3 class="all-img-title">Cody Fisher</h3>
-                        <p class="all-img-des">Trainer</p>
-                    </div>
-                    <div class="team-sec-six">
-                        <h3 class="all-img-title">Theresa Webb</h3>
-                        <p class="all-img-des">Trainer</p>
-                    </div>
+            <div class="meet-team-img">
+                <div class="team-sec-one">
+                    <h3 class="all-img-title">Jerome Bell</h3>
+                    <p class="all-img-des">Trainer</p>
                 </div>
+                <div class="team-sec-two">
+                    <h3 class="all-img-title">Cameron Williamson</h3>
+                    <p class="all-img-des">Trainer</p>
+                </div>
+                <div class="team-sec-three">
+                    <h3 class="all-img-title">Darrell Steward</h3>
+                    <p class="all-img-des">Trainer</p>
+                </div>
+                <div class="team-sec-four">
+                    <h3 class="all-img-title">Dianne Russell</h3>
+                    <p class="all-img-des">Trainer</p>
+                </div>
+                <div class="team-sec-five">
+                    <h3 class="all-img-title">Cody Fisher</h3>
+                    <p class="all-img-des">Trainer</p>
+                </div>
+                <div class="team-sec-six">
+                    <h3 class="all-img-title">Theresa Webb</h3>
+                    <p class="all-img-des">Trainer</p>
+                </div>
+            </div>
         </section>
 
         <!-- Meet Our Team Section Ends -->
-        
-    </main>
-    <footer>
 
+    </main>
+    <footer class="footer-main">
+        <section class="footer-section">
+            <div class="footer-container">
+                <div class="footer-fitness">
+                    <i><h2 class="brand-footer-title">Fitness</h2></i>
+                    <p class="brand-footer-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
+                        gym. With hundreds of professional workouts.</p>
+                </div>
+                <div>
+                    <h3 class="get-started">Get Started</h3>
+                    <h4 class="get-stared-details">Service</h4>
+                    <h4 class="get-stared-details">Contact Us</h4>
+                    <h4 class="get-stared-details">Affiliate Program</h4>
+                    <h4 class="get-stared-details">About Us</h4>
+                </div>
+                <div>
+                    <h3 class="get-started">Get Started</h3>
+                    <h4 class="get-stared-details">Fitness</h4>
+                    <h4 class="get-stared-details">Platform</h4>
+                    <h4 class="get-stared-details">Workout Library</h4>
+                    <h4 class="get-stared-details">App Design</h4>
+                </div>
+            </div>
+        </section>
+        <h3 class="footer-restrict">All right reserved @Fitness 2024</h3>
     </footer>
 </body>
 
