added extra section

--- a/index.html
+++ b/index.html
@@ -180,6 +180,22 @@
 
         <!-- BMI Calculator Section Ends -->
 
+        <!-- Extra Section Starts -->
+        
+        <section>
+            <div class="change-habit-container">
+                <h2 class="change-habit-title">Our Works</h2>
+                <p class="change-habit-description">Our work is dedicated to transforming lives through fitness. From personalized training plans to engaging community events, we focus on delivering results that matter. Every program we create is designed with your goals in mind, helping you achieve lasting health and wellness.</p>
+            </div>
+            <div class="our-works-img">
+                <img src="images/work-1.jpg" alt="">
+                <img src="images/work-2.jpg" alt="">
+                <img src="images/work-3.jpg" alt="">
+            </div>
+        </section>
+            
+        <!-- Extra Section Ends -->
+
         <!-- Meet Our Team Section Starts -->
 
         <section class="meet-team">
@@ -199,7 +215,7 @@
                 </div>
                 <div class="meet-team-img">
                     <img src="images/trainer2.png" alt="">
-                    <div class="team-sec">
+                    <div class="team-sec"> 
                         <h3>Cameron Williamson</h3>
                         <p>Trainer</p>
                     </div>
